Spacing fixed. Template for blog post summaries added.

--- a/AlumniPortal/AlumniPortal/static/mosaic/css/mosaic.css
+++ b/AlumniPortal/AlumniPortal/static/mosaic/css/mosaic.css
@@ -20,7 +20,7 @@
     float: left;
     position: relative;
     overflow: hidden;
-    margin: 10px 0 0 0px;
+
     background: #111 url(../img/progress.gif) no-repeat center center;
 
     -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
@@ -29,15 +29,19 @@
 .mosaic-block {
     width: 100%;
     height: 250px;
+    margin: 8px 0 0 0px;
 }
 
 .mosaic-block2, .mosaic-block3 {
-    width: 230px;
-    height: 200px;
+    width: 100%;
+    height: 250px;
+    margin: 25px 0 0 0px;
 }
 
 .mosaic-block3 {
-    margin-left: 15px;
+    width: 100%;
+    height: 175px;
+    margin: 8px 0 0 0px;
 }
 
 .mosaic-block4-blog {
